added error message

--- a/src/CSharp2CIL/Views/Home/Index.cshtml
+++ b/src/CSharp2CIL/Views/Home/Index.cshtml
@@ -18,16 +18,16 @@
                 <textarea id="csharp">
 class A
 {
-  public static void Main()
+  int GetNumber()
   {
-    int a=4;
-    if (a==3)
+    int b = 4;
+    if (b > 3)
     {
-      int b = 5;
+     b = 4;
     }
+    return b;
   }
-}
-                </textarea>
+}</textarea>
             </div>
             <div class="col-md-6">
                 <h2 class="text-center">CIL</h2>
