--- a/src/CSharp2CIL/Content/site.css
+++ b/src/CSharp2CIL/Content/site.css
@@ -1,11 +1,11 @@
-﻿html, body, .col-md-6{
+﻿html, body, .col-md-6 {
     height: 100%;
 }
 .container {
     height: 94%;
 }
 .header {
-    height:5%
+    height:5%;
 }
 .content {
     height:95%;
@@ -23,3 +23,45 @@ button {
 .navbar {
     margin-bottom: initial;
 }
+
+#forkongithub {
+    position: fixed;
+    right: 0;
+    z-index: 9999;
+}
+
+    #forkongithub a {
+        width: 200px;
+        background: #17A697;
+        color: #fff;
+        text-decoration: none;
+        font-weight: bold;
+        padding: 5px 40px;
+        font-size: 1rem;
+        line-height: 2rem;
+        position: absolute;
+        top: 46px;
+        right: -60px;
+        transform: rotate(45deg);
+        -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+        -moz-transform: rotate(45deg);
+        -o-transform: rotate(45deg);
+        box-shadow: 4px 4px 10px rgba(0,0,0,0.8);
+    }
+
+        #forkongithub a::before, #forkongithub a::after {
+            content: "";
+            width: 100%;
+            display: block;
+            position: absolute;
+            top: 1px;
+            left: 0;
+            height: 1px;
+            background: #fff;
+        }
+
+        #forkongithub a::after {
+            bottom: 1px;
+            top: auto;
+        }
