--- a/src/CSharp2CIL/Content/site.css
+++ b/src/CSharp2CIL/Content/site.css
@@ -24,6 +24,16 @@ button {
     margin-bottom: initial;
 }
 
+#fade {
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #ababab;
+    z-index: 4;
+    opacity: .7;
+}
+
 #forkongithub {
     position: fixed;
     right: 0;
