--- a/src/CSharp2CIL/Views/Home/Index.cshtml
+++ b/src/CSharp2CIL/Views/Home/Index.cshtml
@@ -8,6 +8,7 @@
     <link href="~/Content/site.css" rel="stylesheet"/>
 </head>
 <body>
+    <div id="fade"></div>
     <span id="forkongithub"><a href="https://github.com/vkairys/csharp2cil">Fork me on GitHub</a></span>
 	<nav class="navbar navbar-default">
         <button class="btn btn-default">Parse</button>
@@ -34,9 +35,10 @@ class A
             </div>
         </div>
 	</div>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/4.12.0/codemirror.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/4.12.0/codemirror.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/4.12.0/mode/clike/clike.min.js"></script>
-	<script src="//code.jquery.com/jquery-2.1.3.js"></script>
+	<script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/spin.js/2.0.1/spin.min.js"></script>
 	<script src="~/Scripts/csharp2cil.js"></script>
 </body>
 </html>
