--- a/src/CSharp2CIL/Views/Home/Index.cshtml
+++ b/src/CSharp2CIL/Views/Home/Index.cshtml
@@ -5,7 +5,11 @@
 	<title>CSharp2CIL</title>
 	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
 	<link href="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.0.0/codemirror.min.css" rel="stylesheet">
-    <link href="~/Content/site.css" rel="stylesheet"/>
+    <link href="~/Content/site.css" rel="stylesheet">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.0.0/codemirror.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.0.0/mode/clike/clike.min.js"></script>
+    <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/spin.js/2.0.1/spin.min.js"></script>
 </head>
 <body>
     <div id="fade"></div>
@@ -35,10 +39,6 @@ class A
             </div>
         </div>
 	</div>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.0.0/codemirror.min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.0.0/mode/clike/clike.min.js"></script>
-	<script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/spin.js/2.0.1/spin.min.js"></script>
 	<script src="~/Scripts/csharp2cil.js"></script>
 </body>
 </html>
