A two-dimensional array used to represent csharp and cil code relation. Each array index represents Csharp code line number. Each array element holds a array of cil code numbers.

--- a/src/CSharp2CIL/Content/site.css
+++ b/src/CSharp2CIL/Content/site.css
@@ -24,6 +24,10 @@ button {
     margin-bottom: initial;
 }
 
+.highlight {
+    background:#17A697;
+}
+
 #fade {
     display: none;
     position: absolute;
